--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,3 +10,12 @@ section {
 h2 {
     text-align: center;
 }
+
+li {
+    margin-top: 25px;
+}
+
+li:hover {
+    text-decoration: underline;
+    font-weight: 700;
+}
