added console.log and score variable in quizLogic.js

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@ section {
     height: 100vh;
     width: auto;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
