--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,15 +15,26 @@ h2 {
 li {
     margin-top: 25px;
     background-color: #383838;
+    animation-name: ease-in-out 500ms;
+    transition: 0.5s ease;
 }
 
 li:hover {
     text-decoration: underline;
     font-weight: 700;
     background-color: #6e6e6e;
+    animation-name: ease-in-out 500ms;
+    transition: 0.5s ease;
+    font-size: 150%;
 }
 
 #answerFeedback {
     text-align: center;
     margin-top: 50px;
+}
+
+#enterName {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
