--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,11 @@ section {
     text-align: center;
 }
 
+#startQuizButton {
+    height: auto;
+}
+
+
 h2 {
     text-align: center;
 }
@@ -17,15 +22,17 @@ li {
     background-color: #383838;
     animation-name: ease-in-out 500ms;
     transition: 0.5s ease;
+    padding-left: 10px;
 }
 
-li:hover {
+#answerOptions li:hover {
     text-decoration: underline;
     font-weight: 700;
     background-color: #6e6e6e;
     animation-name: ease-in-out 500ms;
     transition: 0.5s ease;
     font-size: 150%;
+
 }
 
 #answerFeedback {
