--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,3 +58,8 @@ li {
     font-weight: 600;
     font-size: 150%;
 }
+
+#timescoreCounter {
+    display: flex;
+    justify-content: space-around;
+}
