--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,14 @@
+* {
+    color: #dcdcdc;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body {
+    background-color: #212121;
+}
+
+
+
 section {
     height: 100vh;
     width: auto;
@@ -62,4 +73,9 @@ li {
 #timescoreCounter {
     display: flex;
     justify-content: space-around;
+}
+
+button {
+    color: black;
+    background-color: #ffb300;
 }
