--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,10 @@ body {
     background-color: #212121;
 }
 
-
+header {
+    background-color: #2b2b2b;
+    color: #dcdcdc;
+}
 
 section {
     height: 100vh;
@@ -75,7 +78,7 @@ li {
     justify-content: space-around;
 }
 
-button {
+button, {
     color: black;
     background-color: #ffb300;
 }
