added time loss on incorrect answer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
     background-color: #212121;
 }
 
-header {
+#timescoreCounter {
     background-color: #2b2b2b;
     color: #dcdcdc;
 }
@@ -67,6 +67,10 @@ li {
     align-items: center;
 }
 
+#end-screen p:hover {
+    font-weight: 600;
+}
+
 #quizQ {
     text-align: center;
     font-weight: 600;
@@ -78,7 +82,11 @@ li {
     justify-content: space-around;
 }
 
-button, {
+button {
     color: black;
     background-color: #ffb300;
+}
+
+input {
+    color: black;
 }
